# otus-hello-world

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  lib.cpp  lib.h  main.cpp
.github/workflows/: release.yaml
tests/: CMakeLists.txt  output-test.cpp  version_validity.cpp
